k8s/test/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: test
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
